Creation of the page

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,6 +7,6 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
+<link rel="shortcut icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/89135725?v=4">
 
 <!-- end custom head snippets -->
