--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,12 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+            <li class="fork"><a href="https://github.com/warpynew">GitHub</a></li>
             {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-              <li class="title">DOWNLOADS</li>
+              <li class="downloads"><a href="https://www.linkedin.com/in/yosseth-sanchez-chino-5ab65a1a7/">Linkedin</a></li>
+              <li class="downloads"><a href="https://app.hackthebox.com/users/623013">HackTheBox</a></li>
+              <li class="downloads"><a href="https://www.hackerrank.com/warpygato?hr_r=1">HackerRank</a></li>
+              <li class="title">PAGES</li>
             {% endif %}
           </ul>
         </nav>
@@ -35,11 +36,10 @@
 
       <section>
         <div id="title">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <h1>W.D.F.P - BLOGS</h1>
+          <p></p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/warpynew">warpynew</a></span>
         </div>
 
         {{ content }}
