test modification des couleurs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     {% include head-custom.html %}
+    <style>
+      .titre_article3{
+        background-color: brown;
+      }
+    </style>
   </head>
   <body>
       <div id="header">
