Test article index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,26 @@
     {% include head-custom.html %}
     <style>
       .titre_article3{
-        background-color: brown;
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.13) 0%, rgba(85, 85, 85, 0.139) 57%);
+        border-radius: 5px;
+      }
+      .articles{
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(38, 38, 38, 0.103) 0%, rgba(85, 85, 85, 0) 57%);
+        border-radius: 15px;
+        height: 200px;
+        box-shadow: 10px 10px 5px 2px rgba(0, 0, 0, 0.2);
+        color: #898989 !important; 
+        position: relative;
+        display: flex;
+      }
+
+      .image_article{
+        height: 150px;
+        width: 150px;
+        padding-right: 20px;
+
       }
     </style>
   </head>
